// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid /> Debe mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<div>
  <h3>
    One punch
  </h3>
  <GifGridItem
    id="asd"
    key="asd"
    title="fake title"
    url="https://localhost:/cualquiercosa.jpg"
  />
  <GifGridItem
    id="123"
    key="123"
    title="fake title"
    url="https://localhost:/cualquiercosa.jpg"
  />
</div>
`;

exports[`Pruebas en el <GifGrid /> Debe mostrarse correctamente 1`] = `
<div>
  <h3>
    One punch
  </h3>
  <p>
    Loading...
  </p>
</div>
`;
